--- a/entreprise_tp/contact_entreprise.html
+++ b/entreprise_tp/contact_entreprise.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Projet Martin-pécheur and co</title>
 	<link rel="stylesheet" type="text/css" href="entreprise.css">
+	<link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css" type="text/css" />
 </header>
 <body>
 
@@ -93,12 +94,13 @@
 						<br/>
 					</fieldset>
 
-					<input type="submit" name="envoyer" id="enoyer" value="Envoyer" />
+					<input type="submit" name="envoyer" id="envoyer" value="Envoyer" />
 
 				</form>
 		</article>
 	</section>
-	</section>
-
 </body>
+<footer>
+	<p><img id="logo" src="image/logo.jpg"></img> Martin pécheur and co , tous droit réserver</p>
+</footer>
 </html>
