--- a/entreprise_tp/partenaire.html
+++ b/entreprise_tp/partenaire.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Partenaire Martin-pécheur and co</title>
 	<link rel="stylesheet" type="text/css" href="entreprise.css">
+	<link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css" type="text/css" />
 </header>
 
 <body>
@@ -42,7 +43,8 @@
 		</article>
 
 	</section>
-
-
 </body>
+<footer>
+	<p><img id="logo" src="image/logo.jpg"></img> Martin pécheur and co , tous droit réserver</p>
+</footer>
 </html>
