--- a/entreprise_tp/projet.html
+++ b/entreprise_tp/projet.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Projet Martin-pécheur and co</title>
 	<link rel="stylesheet" type="text/css" href="entreprise.css">
+	<link rel="stylesheet" media="screen and (max-width: 1280px)" href="petite_resolution.css" type="text/css" />
 </header>
 
 <body>
@@ -13,7 +14,7 @@
 		<h2><a href="partenaire.html">Partenaire</a></h2>
 		<h2><a href="projet.html">Projet</a></h2>
 		<h2><a href="contact_entreprise.html">Contact</a></h2>
-		<img id="logo" src="image/logo.jpg"></img>
+		<h2><img id="logo" src="image/logo.jpg"></img></h2>
 	</nav>
 
 	<br/>
@@ -42,7 +43,8 @@
 		</article>
 
 	</section>
-
-
 </body>
+<footer>
+	<p><img id="logo" src="image/logo.jpg"></img> Martin pécheur and co , tous droit réserver</p>
+</footer>
 </html>
